<feat>[Create The About Us Page]:<Create The Hero> [   1.Create The Row Structure     1.1 Add Navigation Var     1.2 Add Headline   2.Style It     2.1 Change The Font Color To Black ]

--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -305,6 +305,9 @@
   .footer{
     flex-direction: column;
   }
+  .footer-content{
+    flex-direction: column;
+  }
   .footer .section.one{
     width: 100%;
     align-items: center;
