--- a/CSS/color-button.css
+++ b/CSS/color-button.css
@@ -1,12 +1,13 @@
 .call-to-action{
   position: relative;
-  background: #fff;
-  color: #fff;
+  background:#ff1867;
+  color: white;
   text-transform: uppercase;
   font-size: 1.5em;
   letter-spacing:0.1em;
   font-weight: 400;
   padding: 10px 30px;
+  text-align: center;
   transition: 0.5s;
 }
 .call-to-action:hover 
@@ -21,7 +22,7 @@
   content:"";
   position: absolute;
   inset:2px;
-  background:#27282c ;
+  background:#ff1867;
 }
 .call-to-action span {
   position: relative;
@@ -39,7 +40,7 @@
   left: 80%;
   width:10px;
   height:4px;
-  background: #27282c;
+  background: #ff1867;
   transform: translateX(50%)skewX(325deg);
   transition: 0.5s;
 
@@ -56,7 +57,7 @@
   left: 20%;
   width:10px;
   height:4px;
-  background: #27282c;
+  background:#ff1867;
   transform: translateX(50%)skewX(325deg);
   transition: 0.5s;
 
