--- a/CSS/Benefits-two.css
+++ b/CSS/Benefits-two.css
@@ -1,10 +1,19 @@
+:root{
+  --fs-2xl:4.5rem;
+  --fs-xl:4rem;
+  --fs-lg:3.5rem;
+  --fs-md:2.5rem;
+  --fs-sm:2rem;
+  --fs-xs:1.5rem;
 
+  
+}
 .cards-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding: 0;
-  gap: var(--fs-200)
+  gap: var(--fs-md)
 }
 .card{
   display: flex;
@@ -41,25 +50,18 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  font-size:2rem;
+  font-size:var(--fs-lg);
   flex-direction: column;
+  gap:var(--fs-lg) ;
   
-
-
-}
-.fa-2xl {
-  position: absolute;
-  top: 110px;
-  z-index: 0;
-  font-size: 4em;
-
 
 
 }
 .card .face1 .card-inside-content h3{
   display: flex;
   position: relative;
-  font-size: 1.32em;;
+  top: var(--fs-sm);
+  font-size: var(--fs-md);
   font-weight: 700;
   opacity: 0.02;
 }
@@ -72,10 +74,13 @@
   background-color: white;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 20px;
   transform: translateY(-50%);
   transition: 0.5s;
 
+}
+.card .face2 h3{
+  display: none;
 }
 .card:hover .face2{
   transform: translateX(0);
@@ -87,5 +92,5 @@
 .card .face2 .card-inside-content p{
 
   flex-direction: column;
-  font-size: 2rem;
+  font-size: var(--fs-sm);
 }
