--- a/CSS/Color-Button-Smaller.css
+++ b/CSS/Color-Button-Smaller.css
@@ -1,7 +1,8 @@
 
 
 .call-to-action-smaller{
-  position: relative;
+  text-align: center;
+  position: absolute;
   background: #fff;
   color: #fff;
   text-transform: uppercase;
@@ -10,6 +11,8 @@
   font-weight: 400;
   padding: 10px 30px;
   transition: 0.5s;
+  width: 85%;
+  bottom:0.5rem;
 }
 .call-to-action-smaller:hover 
 {
