<Feat>[Create The Features Section]:<Create The Row Structure And Style It> [   1.Create The Row Structure     1.1 Add headline     1.2 Add content       1.2.1 Image       1.2.2 Carrusel         1.2.2.1 list         1.2.2.2 Add buttons   2.Style It     2.1 Img       2.1.1 Add Image       2.1.2 Set size     2.2 Buttons       2.2.1 Set size       2.2.1 Set position       2.2.1 Set hover and focus         2.2.1.1 turn into while and font darker         2.2.1.2 outline when focus
]

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -197,7 +197,6 @@ a{
 
 } 
 
-
 .part.three {
   background-color: white;
   background-color: black;
@@ -249,6 +248,64 @@ img.testimony-client-photo{
 .sub-static-icon{
   font-size: var(--fs-xl);
 }
+.features.part.five{
+  background-color: #E08D85;
+}
+.part-content.five{
+  flex-direction: row;
+  width:100%;
+  gap:0rem;
+}
+.part-five-image-container{
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 50px;
+  width: 40%;
+  background-image: url('/Images/Heroimage-one.jpeg');
+  background-position-x:center;
+  background-position-y: center;
+}
+.part-content.five img{
+  position: relative;
+  z-index: -999;
+  border-radius: 0px;
+  width: 40%;
+}
+.carrusel{
+  position: relative;
+  width:100%;
+  background-color: gray;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.button{
+  position: absolute;
+  font-size:7rem;
+  background: none;
+  border: none;
+  top: 50%;
+  color: rgba(255,255, 255, .5);
+  transform:translateY(-50%);
+  cursor:pointer;
+  background-color: rgba(0, 0, 0, .1);
+  padding: 0.5rem;
+  border-radius: .25rem;
+
+}
+.button:hover,
+.button:focus{
+  color: white;
+  background-color: rgba(0, 0, 0, .2);
+}
+.button:focus{
+  outline: 1px solid black;
+}
+.button.right{
+  right:1rem;
+}
+.button.left{
+  left: 1rem;
+}
+
 
 
 
