--- a/CSS/index.css
+++ b/CSS/index.css
@@ -270,43 +270,54 @@ img.testimony-client-photo{
   border-radius: 0px;
   width: 40%;
 }
-.carrusel{
+.carousel{
   position: relative;
   width:100%;
-  background-color: gray;
+  background-color:#27282c;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+.slide{
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+}
+.slide > span{
+  display: block;
+  width:100%;
+  height: 100%;
+
+}
+.slide[data-active]{
+  opacity:1;
+}
 .button{
   position: absolute;
-  font-size:7rem;
   background: none;
   border: none;
-  top: 50%;
-  color: rgba(255,255, 255, .5);
-  transform:translateY(-50%);
-  cursor:pointer;
+  font-size: 10rem;
+  color: rgba(255, 255, 255, .5);
   background-color: rgba(0, 0, 0, .1);
+  top: 50%;
+  transform: translateY(-50%);
   padding: 0.5rem;
-  border-radius: .25rem;
-
+  cursor: pointer;
 }
 .button:hover,
 .button:focus{
-  color: white;
+  color:white;
   background-color: rgba(0, 0, 0, .2);
 }
 .button:focus{
-  outline: 1px solid black;
+  outline:1px solid black
 }
-.button.right{
-  right:1rem;
-}
-.button.left{
+.button.preview{
   left: 1rem;
 }
+.button.next{
+  right: 1rem;
 
-
+}
 
 
 .footer { 
