--- a/CSS/index.css
+++ b/CSS/index.css
@@ -76,7 +76,7 @@ li{
 .Home{
   color: white;
 }
-li:hover{
+.links li:hover{
   text-shadow: 0 0 20px white;
   transition: 0.5s ;
 }
@@ -255,6 +255,12 @@ img.testimony-client-photo{
   flex-direction: row;
   width:100%;
   gap:0rem;
+  background-color:#27282c;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 50px;
+}
+.part-content.five span{
+  padding:var(--fs-sm);
 }
 .part-five-image-container{
   border-top-left-radius: 10px;
@@ -264,6 +270,7 @@ img.testimony-client-photo{
   background-position-x:center;
   background-position-y: center;
 }
+
 .part-content.five img{
   position: relative;
   z-index: -999;
@@ -271,8 +278,10 @@ img.testimony-client-photo{
   width: 40%;
 }
 .carousel{
+  display: flex;
+  flex-direction: column;
   position: relative;
-  width:100%;
+  width:50%;
   background-color:#27282c;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -283,10 +292,21 @@ img.testimony-client-photo{
   opacity: 0;
 }
 .slide > span{
-  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: var(--fs-xl);
   width:100%;
   height: 100%;
 
+}
+.slide > span >h3{
+  display: flex;
+  justify-content: center;
+}
+.slide >span> ol{
+  display: flex;
+  flex-direction: column;
+  gap: var(--fs-sm);
 }
 .slide[data-active]{
   opacity:1;
@@ -295,7 +315,7 @@ img.testimony-client-photo{
   position: absolute;
   background: none;
   border: none;
-  font-size: 10rem;
+  font-size: 2rem;
   color: rgba(255, 255, 255, .5);
   background-color: rgba(0, 0, 0, .1);
   top: 50%;
@@ -317,6 +337,29 @@ img.testimony-client-photo{
 .button.next{
   right: 1rem;
 
+}
+.card-icon{
+  position: absolute;
+  transform: translateY(-50%);
+  right: 40%;
+  font-size: var(--fs-sm);
+  top:95%;
+}
+.card-icon i[data-active]{
+  color: white;
+}
+.our-physical-store {
+  background-color: gray;
+  background-image: url('../Images/1000_F_177137562_N8tXCeC7CqOuAFqejdUnhQFvOzUQiDnw.jpg');
+  background-blend-mode: multiply;
+  background-position-x: center;
+}
+.our-physical-store ul{
+  display: flex;
+  flex-direction: column;
+}
+.our-physical-store span {
+  align-items: center;
 }
 
 
