<Feat>[Create The Features Section]:<JavaScript Features And Style It> [   1.Javascript     1.1 Add functions to make the carousel code more readable   2.Style it     1.2 Create a transition between slides to make it look better
]

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -290,6 +290,9 @@ img.testimony-client-photo{
   position: absolute;
   inset: 0;
   opacity: 0;
+  transition: 200ms opacity ease-in-out;
+  transition-delay: 200ms;
+
 }
 .slide > span{
   display: flex;
@@ -345,7 +348,7 @@ img.testimony-client-photo{
   font-size: var(--fs-sm);
   top:95%;
 }
-.card-icon i[data-active]{
+.card-icon i[data-white]{
   color: white;
 }
 .our-physical-store {
