--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -59,7 +59,7 @@
       font-size: 4.5rem;
       width: 95%;
     }
-    .part-content.five{
+    section.five .part-content{
       min-height: 95rem;
     }
   
@@ -74,7 +74,7 @@
       --fs-sm:3rem;
       --fs-xs:2rem;
     }
-    .links  ul {
+    nav ul {
       gap: var(--fs-lg);
     }    
     .fa-2xl {
@@ -90,8 +90,8 @@
     .call-to-action-smaller {
       font-size: 3rem;
     }
-    .part-content.five{
-      min-height: 0rem;
+    section.five .part-content{
+      min-height: 65rem;
     }
   
 } 
@@ -120,7 +120,6 @@
     .card .face {
       width:282px;
       height:250px;
-      
     }
 
     .card .face1 {
@@ -152,8 +151,8 @@
       font-size:1em;
       width: 85%;
     }
-    .part-content.five{
-      min-height: 40rem;
+    section.five .part-content{
+      min-height: 0rem;
     }
 }
 
@@ -169,9 +168,6 @@
   
     
   }
-    .personalize-image {
-      width: 50%;
-    }
     .card .face {
       height: 21rem;
       width: 22rem;
@@ -179,9 +175,6 @@
     .card .face1 .card-inside-content h3 {
       font-size:var(--fs-lg);
       top: 30px;
-    }
-    .part-content.five{
-      min-height: 0rem;
     }
 
    
@@ -281,23 +274,21 @@
 @media(max-width:950px){
 
   
-  .part{
+  section,header{
     padding: 3rem ;
     min-height: auto;
   }
-  .part.one{
+  header{
     flex-direction: column;
     min-height:auto;
   }
-  .navigation-bar{
+  nav{
     width: 100%;
   }
   .logo{
     width:12rem ;
   }
-
-
-  nav{
+  nav.navigation-bar{
     display: none;
   }
   i.fa-solid.fa-bars {
@@ -390,7 +381,7 @@
     border-bottom-left-radius: 0px;
     min-height: 30rem;
   }
-  .part-content.five{
+  section.five .part-content{
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -401,15 +392,15 @@
   .button{
     font-size: var(--fs-lg);
   }
-  .part-content.five .carousel{
+  .part-content  .carousel{
     width:100%;
     min-height: 45rem;
   }
-  .part-content.five .carousel{
+  .part-content .carousel{
     width:100%;
     min-height: 50rem;
   }
-  .part-content.five .carousel .slide span{
+  .part-content .carousel .slide span{
     display: flex;
     align-items: center;
     width: 60%;
@@ -497,10 +488,10 @@
   .call-to-action-smaller{
     width:92%;
   }
-  .proof.part.four,.section-headline{
+  section.proof.four,.section-headline{
     text-align: center;
   }
-  .part-content.five .carousel{
+  section.five .part-content .carousel{
     min-height: 50rem;
   }
 }
@@ -514,7 +505,7 @@
     --fs-sm:1rem;
     --fs-xs:1rem;
   } */
-  .part.one{
+  header{
     min-height: auto;
   }
   .card{
@@ -540,10 +531,10 @@
     align-items: center;
     gap: var(--fs-sm);
   }
-  .part-content.five .carousel{
+  section.five .part-content .carousel{
     min-height: 60rem;
   }
-  .part-content.five .carousel .slide span{
+  section.five .part-content .carousel .slide span{
     width:80%;
   }
 
@@ -551,7 +542,7 @@
 /* sm */
 /* xs */
 @media(max-width:445px){
-  .part{
+  section{
     padding: 2rem;
   }
   .card{
@@ -577,10 +568,10 @@
     flex-direction: column;
     gap: var(--fs-lg);
   }
-  .part-content.five .carousel{
+  section.five .part-content .carouse{
     min-height:68rem;
   }
-  .part-content.five .carousel .slide span{
+  section.five .part-content .carouse .slide span{
     width: 100%;
   }
   .button{
@@ -596,7 +587,7 @@
 
 }
 @media(max-width:330px){
-  .part{
+  section{
     padding: 1rem;
   }
   
